--- a/res/layout/fragment_sections.xml
+++ b/res/layout/fragment_sections.xml
@@ -1,8 +1,16 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
+<android.support.v4.widget.SwipeRefreshLayout
+	    xmlns:android="http://schemas.android.com/apk/res/android"
+	    android:id="@+id/board_section_container"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_weight="1" >
 
-</LinearLayout>
+    <ListView
+        android:id="@+id/list_boardSections"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" >
+    </ListView>
+
+</android.support.v4.widget.SwipeRefreshLayout>
